--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,7 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# Editor settings
+.vscode/
+.idea/
